--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,40 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-  
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply text-foreground overscroll-y-none bg-transparent;
-  }
-}
-
 @layer utilities {
   .tooltip {
-    visibility: hidden;
-    position: absolute;
+    @apply invisible absolute;
   }
 
   .has-tooltip:hover .tooltip {
-    visibility: visible;
-    z-index: 50;
+    @apply visible z-50;
+  }
+
+  @keyframes spinner {
+    to {
+      transform: rotate(360deg);
+    }
   }
 
   .base-spinner {
@@ -79,25 +58,6 @@
     animation: spinner 1.5s linear infinite;
   }
 
-  .drop {
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    transition: background-color 0.2s ease-in-out;
-  }
-
-  .uploadmyfile {
-    display: none;
-  }
-}
-
-@layer utilities {
-  @keyframes spinner {
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
   @-webkit-keyframes spinner {
     0% {
       -webkit-transform: rotate(0deg);
@@ -114,6 +74,17 @@
     100% {
       transform: rotate(360deg);
     }
+  }
+
+  .drop {
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    transition: background-color 0.2s ease-in-out;
+  }
+
+  .uploadmyfile {
+    display: none;
   }
 }
 
@@ -183,7 +154,9 @@
   * {
     @apply border-border;
   }
-  body {
-    @apply bg-background text-foreground;
-  }
+}
+
+html,
+body {
+  @apply bg-background text-foreground;
 }
