--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  /* Force all sidebar SVGs to respect CSS size classes over inline width/height attributes */
+  [data-sidebar] svg {
+    width: 1em !important;
+    height: 1em !important;
+  }
+}
+
 @layer utilities {
   .tooltip {
     @apply invisible absolute;
